welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: ';' expected but 'return' found.
	} return vuBiscuit;
          ^