welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit: Boolean = false
	for (i1 <- 1 to 6) {
		avance();
		if (estSurBiscuit()) {
			vuBiscuit = true;
		}
	} return vuBiscuit;
} 


